<resources>
    <string name="app_name">Birds &amp; Bees</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="whats_your_approach_to_planning_things">Whats your approach to planning things?</string>
    <string name="getting_to_know_you">Getting to know you</string>
    <string name="what_type_of_holiday_do_you_enjoy_most">What type of holiday do you enjoy most?</string>
    <string name="hot_beach">Hot beach</string>
    <string name="skiing">Skiing</string>
    <string name="nature">Nature</string>
    <string name="city_breaks">City breaks</string>
    <string name="systematic">Systematic</string>
    <string name="go_with_the_flow">Go with the flow</string>
    <string name="see_with_mood">See with mood</string>
    <string name="next">NEXT</string>
    <string name="depends_on_the_day">Depends on the day</string>
    <string name="getting_to_know_you">Getting to know you</string>
    <string name="are_you_a_morning_or_night_person">Are you a morning or night person?</string>
    <string name="morning">Morning</string>
    <string name="night_owl">Night owl</string>
    <string name="what_quality_matters_the_most">What quality matters the most?</string>
    <string name="optimisim">Optimisim</string>
    <string name="ambition">Ambition</string>
    <string name="humour">Humour</string>
    <string name="confidence">Confidence</string>
    <string name="sports_activities">Sports activities</string>
    <string name="socialising">Socialising</string>
    <string name="working">Working</string>
    <string name="at_home">At home</string>
    <string name="where_do_you_like_to_spend_your_free_time">Where do you like to spend your free time?</string>
    <string name="submit">SUBMIT</string>
    <string name="email">Email:</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="log_in">Log In</string>
    <string name="match_name">Match Name</string>
    <string name="course">Course:</string>
    <string name="age">Age:</string>
    <string name="direct_message">Direct Message</string>
    <string name="settings">Settings</string>
    <string name="compatibility">Compatibility: %</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="twitter_https_twitter_com_explore">Twitter - https://twitter.com/explore</string>
    <string name="instagram_https_www_instagram_com">instagram - https://www.instagram.com/</string>
    <string name="deactivate_account">deactivate account</string>
    <string name="blocked_accounts">blocked accounts</string>
    <string name="change_password">change password</string>
    <string name="update">update</string>
    <string name="share">share</string>
    <string name="facebook_https_en_gb_facebook_com">facebook - https://en-gb.facebook.com/</string>
</resources>
