<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SurveyThirdView"
    android:orientation="vertical"
    android:gravity="center">

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="453dp"
        android:text="@string/sports_activities"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="484dp"
        android:text="@string/at_home"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="646dp"
        android:text="@string/getting_to_know_you"
        android:textColor="#191F38"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/Q5"
        android:layout_width="403dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="578dp"
        android:autofillHints="test"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/where_do_you_like_to_spend_your_free_time"
        android:textSize="20sp"
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="518dp"
        android:text="@string/working"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="550dp"
        android:text="@string/socialising"
        android:textSize="20sp" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:onClick="Homepage"
        android:text="@string/next" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="272dp"
        android:text="@string/submit"
        android:textSize="20sp" />
</RelativeLayout>