<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.HomeView"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="680dp"
        android:layout_marginEnd="363dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/profile"
        android:contentDescription="@string/todo"></ImageView>

    <TextView
        android:id="@+id/Age"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="271dp"
        android:layout_marginBottom="403dp"
        android:text="@string/age"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="491dp"
        android:src="@drawable/profile"
        android:contentDescription="@string/todo"></ImageView>

    <TextView
        android:id="@+id/Compatibility"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="365dp"
        android:text="@string/compatibility"
        android:textSize="20sp" />

    <Button
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="271dp"
        android:layout_marginBottom="3dp"
        android:onClick="openSettings"
        android:text="@string/settings" />

    <Button
        android:id="@+id/chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="272dp"
        android:onClick="openChats"
        android:text="@string/direct_message"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/MatchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="494dp"
        android:text="@string/match_name" />

    <TextView
        android:id="@+id/Course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="438dp"
        android:text="@string/course"
        android:textSize="20sp" />

</RelativeLayout>