<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginView"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/birdsandbees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="284dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/writing"></ImageView>

    <ImageView
        android:id="@+id/brunelLogo"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/brunel_university"></ImageView>

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="345dp"
        android:layout_height="330dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="27dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="281dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/project_logo"></ImageView>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="79dp"
        android:onClick="openHome"
        android:text="@string/log_in" />

    <EditText
        android:id="@+id/email"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="224dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="174dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:text="Password:"
        android:autofillHints="" />

</RelativeLayout>